infra/dep-assistant.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assistant-frontENV
  namespace: tia-hubble-prd-nat
  labels:
    app: assistant-frontENV
spec:
  replicas: NUM_REPLICAS
  selector:
    matchLabels:
      app: assistant-frontENV
  template:
    metadata:
      labels:
        app: assistant-frontENV
        log_type: assistant
    spec:
      containers:
      - name: assistant-front
        image: ecs.assistant/ai-assistant:IMAGE_VER
        resources:
          limits:
            cpu: 200m
            memory: 500Mi
          requests:
           cpu: 200m
           memory: 500Mi
