infra/dep-db-groom.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: assistant-mysql
  namespace: tia-hubble-prd-nat
  labels:
    app: assistant-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assistant-db
  template:
    metadata:
      labels:
        app: assistant-db
    spec:
      containers:
        - name: container
          image: 'openshift.artifactory.mycloud.intranatixis.com/mysql:8.4.3'
          ports:
            - containerPort: 27101
              protocol: TCP
          resources:
            limits:
              cpu: '2'
              memory: 4Gi
            requests:
              cpu: '2'
              memory: 4Gi
          terminationMessagePath: /dev/termination-log
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-storage
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: assistant-db-pvc
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
