infra/svc-db-groom.yml
apiVersion: v1
kind: Service
metadata:
  name: assistant-db-service
  namespace: mynamespace
spec:
  selector:
    app: assistant-db
  ports:
    - protocol: TCP
      port: 27101
      targetPort: 27101
  type: ClusterIP
