infra/svc-groom.yml
apiVersion: v1
kind: Service
metadata:
  name: assistant-service
  namespace: mynamespace
spec:
  selector:
    app: assistant-front
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
