infra/route-db-groom.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: assistant-db
  namespace: tia-hubble-prd-nat
spec:
  host: ai-assistant-db.pres-prod.ocp-infra-prd-1.mycaas.intrabpce.fr
  to:
    kind: Service
    name: assistant-db-service
    weight: 100
  port:
    targetPort: 27101
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
