infra/route-groom.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: assistant-frontend
  namespace: mynamespace
spec:
  host: assistant.fakher.hannafi.com
  to:
    kind: Service
    name: assistant-service
    weight: 100
  port:
    targetPort: 8000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
